[package]
name = "imagedoer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
tokio = { version = "*", features = ["full"] }
serenity = "*"
emojis = "*"
kd-tree = "0.5.0"
rand = "*"
clap = { version = "*", features = ["derive"] }
crossterm = "*"